use v-text to avoid {{}} that will conflict with Contao's insert tags

--- a/nowebpack/index.html
+++ b/nowebpack/index.html
@@ -13,9 +13,7 @@
             :height="chartheight"
             :chartrotation="chartrotation"
             @showinfo="showinfo"></vtc-donut>
-    <div class="explanation">
-        {{ explanation }}
-    </div>
+    <div class="explanation" v-text="explanation"></div>
 </div>
 
 <script src="assets/vue.2.1.6.js"></script>
