mk3 (Contao CE)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       </div>
 
     </div>
+
+    <!--<script src="https://unpkg.com/vue"></script>-->
+    <script>
+        // put (most of the content) of main.js here for "production bundle within Contao content element
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
