better comments on the TODOs

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
 
     </div>
 
+    <!-- activate for "production bundle within Contao content element" -->
     <!--<script src="https://unpkg.com/vue"></script>-->
+
+    <!--put (most of the content) of main.js here for "production bundle within Contao content element" -->
+    <!--
     <script>
-        // put (most of the content) of main.js here for "production bundle within Contao content element
     </script>
+    -->
     <!-- built files will be auto injected -->
   </body>
 </html>
