add build config as library (using webpack-simple)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vuetao Charts</title>
+    <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
     <div id="app">
@@ -24,6 +25,48 @@
       </div>
 
     </div>
-    <!-- built files will be auto injected -->
+    <script src="dist/vuetaocharts.js"></script>
+    <script>
+    new Vue({
+      el: '#app',
+      computed: {
+        explanation: function () {
+          return this.data[this.selected].value
+          + " Prozent der Befragten sagen: "
+          + this.data[this.selected].label
+        }
+      },
+      data: function () {
+        return {
+          msg: 'Demo of the Vuetao Charts Components',
+          selected: 0,
+          data: [
+            {label: "Sehr gut", value: 22.5},
+            {label: "Gut", value: 31.2},
+            {label: "Mittel", value: 24.3},
+            {label: "Schlecht", value: 13.0},
+            {label: "Voll daneben", value: 9.0}
+          ],
+          chartwidth: 230,
+          chartheight: 230,
+          //chartrotation: 0, // keine Rotation, Start des ersten
+          // Segments eines Donuts bei 12 Uhr.
+          //
+          // Wir wollen *bei zwei Segmenten* aber eine Ausrichtung
+          // "rechts/links", gehen also um 90 Grad und die Hälfte
+          // der Größe des ersten Segments (in Grad!) gegen den
+          // Uhrzeigersinn zurück (negative Winkel).
+          chartrotation: -90 - ( (72.5 / 100) * 360 / 2)
+          // evtl noch -180 um die "Orientierung" genau spiegelverkehrt
+          // zu gestalten.
+        }
+      },
+      methods: {
+        showinfo: function (position) {
+          this.selected = position
+        }
+      }
+    })
+    </script>
   </body>
 </html>
