--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Donut</h2>
         <div class="chart">
           <vtc-donut
-                  :data="data"
+                  :chartdata="data"
                   :width="chartwidth"
                   :height="chartheight"
                   :chartrotation="chartrotation"
